--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -45,6 +45,31 @@
             android:layout_gravity="right"
             android:text="Search" />
 
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ETA:"
+            android:textColor="#000000"
+            android:layout_weight="1"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:id="@+id/etaTV"
+            android:layout_weight="4"
+            android:gravity="center"/>
+
     </LinearLayout>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -54,5 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="ph.edu.dlsu.unbind.MapsActivity" />
+
+
 
 </LinearLayout>
